# hackathon

./: .env.example  .gitignore  .tmp-stream-payload.json  README.md  pyproject.toml  requirements.txt  start-local.bat  stop-local.bat
apps/admin-web/: index.html  package-lock.json  package.json  vite.config.ts
apps/api/: main.py
apps/chat-web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/mock_his/: app.py  main.py  service.py
config/deployment/: release_gate.yaml
config/emergency/: clarification-templates.example.json  protocols.example.json  rules.example.json
config/prompts/: hospital-agent.md  safety-evaluator.md
config/runtime/: rate-limits.example.json  settings.example.json
data/mvp/: README.md  manifest.json
docs/: 1.requirement-analysis.md  2.product-definition.md  3.architecture-design.md  4.interface-design.md  5-6-runtime-correction.md  5.ai-engineering-planning.md  6.ai-orchestration.md  file-ownership.yaml  frontend-handoff-chat-app.md  hospital-ai-navigation-architecture-improved.md  implementation-execution-view.md  region-marker-policy.md  repo-manifest.yaml  spec-normalization-plan.md  task-file-map.yaml
docs/data-schema/: wp-005-schema-foundation.md
docs/diagram/: README_hospital_architecture_v2.md  hanoi_heart_hospital_ai_architecture_v2.drawio
docs/spec-registry/: artifact-index.yaml  (+11 more)
prompts/: README.md  task-packet-index.yaml
scripts/: bootstrap.bat  create_board_tasks.py  rag_ingestion.py  smoke-local.bat  test_agent.py  test_vector_search.py  verify-scaffold.bat
(+346 files in other folders)
