[project]
name = "hackathon"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "google-genai>=1.47.0",
    "httpx>=0.28.1",
    "openai>=2.46.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.69.0",
    "uvicorn[standard]>=0.39.0",
]
